[project]
name = "linecord"
version = "0.1.0"
description = "Export your LINE chat history to Discord-compatible format."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django",
]

[dependency-groups]
dev = [
    "ipython>=8.31.0",
]

[tool.uv.sources]
django = { git = "https://github.com/django/django.git" }
